// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkOrderItemCard renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": {
        "dynamic": {
          "dark": "#1b1b1b",
          "highContrastDark": undefined,
          "highContrastLight": undefined,
          "light": "#FFFFFF",
        },
      },
      "borderColor": {
        "dynamic": {
          "dark": "#2a2d32",
          "highContrastDark": undefined,
          "highContrastLight": undefined,
          "light": "#E8EAED",
        },
      },
      "borderRadius": 10,
      "borderWidth": 1,
      "height": 180,
      "marginHorizontal": 30,
      "width": 715,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "space-between",
        "margin": 15,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "space-between",
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#CDD1FE",
              "borderRadius": 15,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            fill="none"
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={20}
            vbWidth={20}
            width={20}
            xml="<svg
          width="20"
          height="20"
          viewBox="0 0 20 20"
          fill="none"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.5 16.25V5C2.5 4.83424 2.56585 4.67527 2.68306 4.55806C2.80027 4.44085 2.95924 4.375 3.125 4.375H7.28906C7.4242 4.37556 7.55562 4.41936 7.66406 4.5L9.83594 6.125C9.94438 6.20564 10.0758 6.24944 10.2109 6.25H15.625C15.7908 6.25 15.9497 6.31585 16.0669 6.43306C16.1842 6.55027 16.25 6.70924 16.25 6.875V8.75"
            stroke='#0517f8'
            strokeWidth="1.4"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M2.5 16.25L4.85938 9.17969C4.9005 9.05467 4.98004 8.94583 5.08666 8.86868C5.19327 8.79152 5.32152 8.74999 5.45313 8.75H17.8828C17.9816 8.74999 18.0791 8.77342 18.1671 8.81836C18.2551 8.86331 18.3312 8.92848 18.3892 9.00854C18.4471 9.0886 18.4852 9.18126 18.5004 9.27891C18.5156 9.37657 18.5074 9.47643 18.4766 9.57031L16.25 16.25H2.5Z"
            stroke='#0517f8'
            strokeWidth="1.4"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>"
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M2.5 16.25V5C2.5 4.83424 2.56585 4.67527 2.68306 4.55806C2.80027 4.44085 2.95924 4.375 3.125 4.375H7.28906C7.4242 4.37556 7.55562 4.41936 7.66406 4.5L9.83594 6.125C9.94438 6.20564 10.0758 6.24944 10.2109 6.25H15.625C15.7908 6.25 15.9497 6.31585 16.0669 6.43306C16.1842 6.55027 16.25 6.70924 16.25 6.875V8.75"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4278523896,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.4}
              />
              <RNSVGPath
                d="M2.5 16.25L4.85938 9.17969C4.9005 9.05467 4.98004 8.94583 5.08666 8.86868C5.19327 8.79152 5.32152 8.74999 5.45313 8.75H17.8828C17.9816 8.74999 18.0791 8.77342 18.1671 8.81836C18.2551 8.86331 18.3312 8.92848 18.3892 9.00854C18.4471 9.0886 18.4852 9.18126 18.5004 9.27891C18.5156 9.37657 18.5074 9.47643 18.4766 9.57031L16.25 16.25H2.5Z"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4278523896,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.4}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "marginHorizontal": 10,
            }
          }
        >
          <Text>
            <Text
              style={
                {
                  "color": {
                    "dynamic": {
                      "dark": "#77889d",
                      "highContrastDark": undefined,
                      "highContrastLight": undefined,
                      "light": "#77889d",
                    },
                  },
                }
              }
            >
              HGE2K5VS2R
            </Text>
            <Text
              style={
                {
                  "color": {
                    "dynamic": {
                      "dark": "#172B4D",
                      "highContrastDark": undefined,
                      "highContrastLight": undefined,
                      "light": "#172B4D",
                    },
                  },
                }
              }
            >
               • 
            </Text>
            <Text
              style={
                {
                  "color": {
                    "dynamic": {
                      "dark": "#77889d",
                      "highContrastDark": undefined,
                      "highContrastLight": undefined,
                      "light": "#77889d",
                    },
                  },
                }
              }
            >
              2024-03-19
            </Text>
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#748094",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#8798ad",
                },
              },
              "fontSize": 14,
              "marginHorizontal": 5,
            }
          }
        >
          4
        </Text>
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "height": 22,
                "width": 22,
              },
            ]
          }
        >
          <FastImageView
            accessibilityLabel="fast-image"
            defaultSource={null}
            resizeMode="contain"
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="fast-image"
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
            "justifyContent": "space-evenly",
          },
        ]
      }
    >
      <View
        style={{}}
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#172B4D",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#172B4D",
                },
              },
              "flexWrap": "wrap",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Testing 13.02.24
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#77889d",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#77889d",
                },
              },
              "flexShrink": 1,
              "fontSize": 14,
              "fontWeight": "400",
            }
          }
        >
          Argentina Customer
        </Text>
        <Text
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#77889d",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#77889d",
                },
              },
              "flexShrink": 1,
              "fontSize": 14,
              "fontWeight": "400",
            }
          }
        >
           • 
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#77889d",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#77889d",
                },
              },
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "fontWeight": "400",
            }
          }
        >
          Argentina Machine
        </Text>
        <Text
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#77889d",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#77889d",
                },
              },
              "flexShrink": 1,
              "fontSize": 14,
              "fontWeight": "400",
            }
          }
        >
           • 
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#77889d",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#77889d",
                },
              },
              "fontSize": 14,
              "fontWeight": "400",
            }
          }
        >
          A-machine
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "space-between",
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": {
                "dynamic": {
                  "dark": "#E6E8FE",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#E6E8FE",
                },
              },
              "borderRadius": 13,
              "display": "flex",
              "flexDirection": "column",
              "height": 26,
              "justifyContent": "center",
              "width": 26,
            }
          }
          theme={
            {
              "colors": {
                "background": "#ffffff",
                "black": "#242424",
                "disabled": "hsl(208, 8%, 90%)",
                "divider": "#bcbbc1",
                "error": "#ff190c",
                "grey0": "#393e42",
                "grey1": "#43484d",
                "grey2": "#5e6977",
                "grey3": "#86939e",
                "grey4": "#bdc6cf",
                "grey5": "#e1e8ee",
                "greyOutline": "#bbb",
                "platform": {
                  "android": {
                    "error": "#f44336",
                    "grey": "rgba(0, 0, 0, 0.54)",
                    "primary": "#2196f3",
                    "searchBg": "#dcdce1",
                    "secondary": "#9C27B0",
                    "success": "#4caf50",
                    "warning": "#ffeb3b",
                  },
                  "default": {
                    "error": "#ff3b30",
                    "grey": "#7d7d7d",
                    "primary": "#007aff",
                    "searchBg": "#dcdce1",
                    "secondary": "#5856d6",
                    "success": "#4cd964",
                    "warning": "#ffcc00",
                  },
                  "ios": {
                    "error": "#ff3b30",
                    "grey": "#7d7d7d",
                    "primary": "#007aff",
                    "searchBg": "#dcdce1",
                    "secondary": "#5856d6",
                    "success": "#4cd964",
                    "warning": "#ffcc00",
                  },
                  "web": {
                    "error": "#ff190c",
                    "grey": "#393e42",
                    "primary": "#2089dc",
                    "searchBg": "#303337",
                    "secondary": "#ca71eb",
                    "success": "#52c41a",
                    "warning": "#faad14",
                  },
                },
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#ad1457",
                "success": "#52c41a",
                "warning": "#faad14",
                "white": "#ffffff",
              },
              "spacing": {
                "lg": 12,
                "md": 8,
                "sm": 4,
                "xl": 24,
                "xs": 2,
              },
            }
          }
        >
          <Text
            style={
              {
                "backgroundColor": "transparent",
                "color": {
                  "dynamic": {
                    "dark": "#64b4fa",
                    "highContrastDark": undefined,
                    "highContrastLight": undefined,
                    "light": "#0000EE",
                  },
                },
                "fontSize": 13,
                "textAlign": "center",
                "zIndex": 1,
              }
            }
          >
            H
          </Text>
        </View>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "fontSize": 14,
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          Haider
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "#CCEFEB",
            "borderRadius": 10,
            "padding": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#00b09b",
              "fontSize": 13,
            }
          }
        >
          VISIT PLANNED
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`WorkOrderItemCard renders correctly with no Assignee 1`] = `
<View
  style={
    {
      "backgroundColor": {
        "dynamic": {
          "dark": "#1b1b1b",
          "highContrastDark": undefined,
          "highContrastLight": undefined,
          "light": "#FFFFFF",
        },
      },
      "borderColor": {
        "dynamic": {
          "dark": "#2a2d32",
          "highContrastDark": undefined,
          "highContrastLight": undefined,
          "light": "#E8EAED",
        },
      },
      "borderRadius": 10,
      "borderWidth": 1,
      "height": 180,
      "marginHorizontal": 30,
      "width": 715,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "space-between",
        "margin": 15,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "space-between",
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#CDD1FE",
              "borderRadius": 15,
              "height": 30,
              "justifyContent": "center",
              "width": 30,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            fill="none"
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={20}
            vbWidth={20}
            width={20}
            xml="<svg
          width="20"
          height="20"
          viewBox="0 0 20 20"
          fill="none"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.5 16.25V5C2.5 4.83424 2.56585 4.67527 2.68306 4.55806C2.80027 4.44085 2.95924 4.375 3.125 4.375H7.28906C7.4242 4.37556 7.55562 4.41936 7.66406 4.5L9.83594 6.125C9.94438 6.20564 10.0758 6.24944 10.2109 6.25H15.625C15.7908 6.25 15.9497 6.31585 16.0669 6.43306C16.1842 6.55027 16.25 6.70924 16.25 6.875V8.75"
            stroke='#0517f8'
            strokeWidth="1.4"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
          <path
            d="M2.5 16.25L4.85938 9.17969C4.9005 9.05467 4.98004 8.94583 5.08666 8.86868C5.19327 8.79152 5.32152 8.74999 5.45313 8.75H17.8828C17.9816 8.74999 18.0791 8.77342 18.1671 8.81836C18.2551 8.86331 18.3312 8.92848 18.3892 9.00854C18.4471 9.0886 18.4852 9.18126 18.5004 9.27891C18.5156 9.37657 18.5074 9.47643 18.4766 9.57031L16.25 16.25H2.5Z"
            stroke='#0517f8'
            strokeWidth="1.4"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>"
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M2.5 16.25V5C2.5 4.83424 2.56585 4.67527 2.68306 4.55806C2.80027 4.44085 2.95924 4.375 3.125 4.375H7.28906C7.4242 4.37556 7.55562 4.41936 7.66406 4.5L9.83594 6.125C9.94438 6.20564 10.0758 6.24944 10.2109 6.25H15.625C15.7908 6.25 15.9497 6.31585 16.0669 6.43306C16.1842 6.55027 16.25 6.70924 16.25 6.875V8.75"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4278523896,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.4}
              />
              <RNSVGPath
                d="M2.5 16.25L4.85938 9.17969C4.9005 9.05467 4.98004 8.94583 5.08666 8.86868C5.19327 8.79152 5.32152 8.74999 5.45313 8.75H17.8828C17.9816 8.74999 18.0791 8.77342 18.1671 8.81836C18.2551 8.86331 18.3312 8.92848 18.3892 9.00854C18.4471 9.0886 18.4852 9.18126 18.5004 9.27891C18.5156 9.37657 18.5074 9.47643 18.4766 9.57031L16.25 16.25H2.5Z"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "payload": 4278523896,
                    "type": 0,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={1.4}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "marginHorizontal": 10,
            }
          }
        >
          <Text>
            <Text
              style={
                {
                  "color": {
                    "dynamic": {
                      "dark": "#77889d",
                      "highContrastDark": undefined,
                      "highContrastLight": undefined,
                      "light": "#77889d",
                    },
                  },
                }
              }
            >
              HGE2K5VS2R
            </Text>
            <Text
              style={
                {
                  "color": {
                    "dynamic": {
                      "dark": "#172B4D",
                      "highContrastDark": undefined,
                      "highContrastLight": undefined,
                      "light": "#172B4D",
                    },
                  },
                }
              }
            >
               • 
            </Text>
            <Text
              style={
                {
                  "color": {
                    "dynamic": {
                      "dark": "#77889d",
                      "highContrastDark": undefined,
                      "highContrastLight": undefined,
                      "light": "#77889d",
                    },
                  },
                }
              }
            >
              2024-03-19
            </Text>
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#748094",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#8798ad",
                },
              },
              "fontSize": 14,
              "marginHorizontal": 5,
            }
          }
        >
          4
        </Text>
        <View
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "height": 22,
                "width": 22,
              },
            ]
          }
        >
          <FastImageView
            accessibilityLabel="fast-image"
            defaultSource={null}
            resizeMode="contain"
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="fast-image"
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
            "justifyContent": "space-evenly",
          },
        ]
      }
    >
      <View
        style={{}}
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#172B4D",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#172B4D",
                },
              },
              "flexWrap": "wrap",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Testing 13.02.24
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#77889d",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#77889d",
                },
              },
              "flexShrink": 1,
              "fontSize": 14,
              "fontWeight": "400",
            }
          }
        >
          Argentina Customer
        </Text>
        <Text
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#77889d",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#77889d",
                },
              },
              "flexShrink": 1,
              "fontSize": 14,
              "fontWeight": "400",
            }
          }
        >
           • 
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#77889d",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#77889d",
                },
              },
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontSize": 14,
              "fontWeight": "400",
            }
          }
        >
          Argentina Machine
        </Text>
        <Text
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#77889d",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#77889d",
                },
              },
              "flexShrink": 1,
              "fontSize": 14,
              "fontWeight": "400",
            }
          }
        >
           • 
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "#77889d",
                  "highContrastDark": undefined,
                  "highContrastLight": undefined,
                  "light": "#77889d",
                },
              },
              "fontSize": 14,
              "fontWeight": "400",
            }
          }
        >
          A-machine
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "space-between",
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "backgroundColor": {
                    "dynamic": {
                      "dark": "#2a2d32",
                      "highContrastDark": undefined,
                      "highContrastLight": undefined,
                      "light": "#E8EAED",
                    },
                  },
                  "borderRadius": 50,
                  "height": 26,
                  "width": 26,
                },
              ]
            }
          >
            <FastImageView
              accessibilityLabel="fast-image"
              defaultSource={null}
              resizeMode="contain"
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              testID="fast-image"
            />
          </View>
          <Text
            numberOfLines={1}
            style={
              {
                "fontSize": 14,
                "marginHorizontal": 10,
                "textAlign": "center",
              }
            }
          >
            tickets.ticketDetails.notAssigned
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#CCEFEB",
            "borderRadius": 10,
            "padding": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#00b09b",
              "fontSize": 13,
            }
          }
        >
          VISIT PLANNED
        </Text>
      </View>
    </View>
  </View>
</View>
`;
